...
    <string name="sfw">SFW</string>
    <string name="sketchy">Sketchy</string>
    <string name="nsfw">NSFW</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="add">Add</string>
    <string name="share">Share</string>
    <string name="downloads_channel_name">Downloads</string>
    <string name="downloads_channel_description">Channel for showing download notifications</string>
    <string name="downloading">Downloading</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="cancel">Cancel</string>
    <string name="downloaded">Downloaded</string>
...
    <string name="height_cannot_be_blank">Height cannot be blank</string>
    <string name="invalid_height">Invalid height</string>
    <string name="custom_resolution">Custom resolution</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="remove">Remove</string>
    <string name="link">Link</string>
    <string name="image">Image</string>
    <string name="error_detecting_objects">Error detecting objects</string>
    <string name="entity">Entity</string>
    <string name="included_tags_keywords">Included Tags/Keywords</string>
    <string name="excluded_tags_keywords">Excluded Tags/Keywords</string>
    <string name="categories">Categories</string>
...
    <string name="user">User</string>
    <string name="title">Title</string>
    <string name="required_one_subreddit">Atleast 1 subreddit is required</string>
    <string name="minutes">minutes</string>
    <string name="frequency_min_val_error">Frequency cannot be less than 15 minutes</string>
    <string name="success">Success</string>
    <string name="menu">Menu</string>
    <string name="search_filters">Search filters</string>
    <string name="image_url">Image URL</string>
    <string name="url_copied">URL Copied!</string>
    <string name="tag_copied">Tag copied!</string>
    <string name="write_tags_to_exif">Write tags to EXIF metadata</string>
    <string name="write_tags_to_exif_desc">Wallpaper tags will be written to the \'UserComment\' EXIF tag when downloaded</string>
...
